fix: correct section spacing on small screens

--- a/app/styles.css
+++ b/app/styles.css
@@ -88,7 +88,7 @@ main {
 }
 
 main section {
-  margin-bottom: 85px;
+  padding: 100px 0;
 }
 
 section .content {
@@ -327,6 +327,12 @@ header nav ul li:nth-of-type(4) {
     animation-delay: 0.6s;
   }
 }
+
+@media (max-height: 700px) and (min-width: 700px), (max-width: 360px) {
+  .hero {
+    padding-top: var(--s-header-height);
+  }
+}
 /* *HERO SECTION END */
 
 /* *ABOUT SECTION */
@@ -431,7 +437,6 @@ section#experience {
   margin-left: auto;
   margin-right: auto;
   max-width: 700px;
-  height: 375px;
 }
 
 section#experience .content {
